ckanext/data_depositario/fanstatic/less/hero.less
.idx-hero {
  height: 420px;
  background: @heroBackgroundColor;
  background-image: @heroBackgroundImage;

  h2 {
    color: @heroFeaturetteHeadingColor;
  }
}

@media (max-width: 979px) {
  .idx-hero {
    background-image: url("../images/visual-md.png");
    background-repeat: no-repeat;
    background-position: 90% 40%;
    background-size: 55% auto;
  }
}

@media (max-width: 767px) {
  .idx-hero {
    background-blend-mode: overlay;
    background-position: 50% 50%;
    background-size: 90% auto;
    height: 250px;
  }
}

.hero-heading {
  padding: 150px 0;
}

@media (max-width: 767px) {
  .hero-heading {
    padding: 75px 0;
  }
}

.btn-hero {
  color: @btnHeroColor !important;
  border: solid 2px @btnHeroBorderColor !important;
  padding: 12px 22px;

  &:hover,
  &:focus {
    background-color: @btnHeroHoverBackgroundColor;
    text-shadow: none;
    border: solid 2px @btnHeroHoverBorderColor !important;
    box-shadow: @btnHeroHoverHoverBoxShadow;
  }
}

.hero-animation-left {
  width: 132px;
  height: 169px;
  margin-left: 120px;
  margin-top: -41px;
  background-image: url("../images/logo_ani.svg");
  background-repeat: no-repeat;
}

.hero-animation-right {
  margin-top: -81px;
  padding-left: 1px;
}

